/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */

syntax = "proto3";

package message.support.nubugger;

message DataPoint {
    /**
     * The represents the type of data
     * NOTE: This should not describe how to display the data, as that should be done client-side.
     */
    enum Type {
        FLOAT_LIST = 0;

        // TODO: support all of these
        // ROTATION_2D = 1;
        ROTATION_3D = 2; // A column-major float list representing a 3x3 rotation marix
        // TRANSFORM_2D = 3;
        // TRANSFORM_3D = 4;
        // SCATTER_2D = 5;
        // SCATTER_3D = 6;
    }

    string label = 1;
    repeated float value = 2 [packed=true];
    Type type = 3;
}